--- a/content/blog.njk
+++ b/content/blog.njk
@@ -1,9 +1,10 @@
 ---
 title: Blog
-emoji: ' <span class="emoji" role="img" aria-label="Pencil and paper">📝</span>'
+emoji: 📝
 eleventyNavigation:
   key: Blog
+  emoji: 📝
   order: 3
 ---
-{% extends "bloglist.njk" %}
+{% extends "layouts/bloglist.njk" %}
 {% set postslist = collections.posts %}
