--- a/_includes/core/_footer.njk
+++ b/_includes/core/_footer.njk
@@ -1,18 +1,9 @@
-<footer class="footer pt-1">
-            <div class="webring--retronaut">
-                <a href="https://webring.dinhe.net/prev/https://fri11s.neocities.org/" class="webring__prev">Previous site</a>
-                <a href="https://webring.dinhe.net/" target="_blank">retronaut</a>
-                <a href="https://webring.dinhe.net/next/https://fri11s.neocities.org/" class="webring__next">Next site</a>
-            </div>
-            <div class="webring--hotline">
-                <a href="https://hotlinewebring.club/fri11s/next" class="webring__prev">Previous site</a>
-                <a href="https://hotlinewebring.club/" target="_blank">hotline</a>
-                <a href="https://hotlinewebring.club/fri11s/previous" class="webring__next">Next site</a>
-            </div>
-            <div class="webring--neossg">
-                <div id="neossg">
-                    <script type="text/javascript" src="https://neossg.neocities.org/onionring-variables.js"></script>
-                    <script type="text/javascript" src="https://neossg.neocities.org/onionring-widget.js"></script>
-                </div>
-            </div>
-        </footer>
+<header class="page__footer grid">
+    <div></div>
+    <nav aria-label="Top level" class="page__nav">
+        <ul>
+            <li>♿ <a href="/accessibility">Accessibility</a>
+            <li>👩‍💻 <a href="/site">About the site</a>
+        </ul>
+    </nav>
+</header>
