--- a/_includes/core/base.njk
+++ b/_includes/core/base.njk
@@ -1,20 +1,51 @@
 {% include "_includes/core/_template-start.njk" %}
 
 <body>
-    {#- <label for="hslRange">Change background colour</label>
-    <input type="range" id="hslRange" min="0" max="360" step="1" />#}
-    <div class="container center py-1">
+    <script>0</script>
+    <div class="page">
         {% include "_includes/core/_nav.njk" %}
-        <main class="main">
-        {%- block main -%}
+        <main class="page__main grid grid--main">
+            <div class="content__sidebar">
+            {%- block left -%}
+                {{- content | safe -}}
+            {%- endblock %}
+            </div>
+            <section class="content__main">
+                <div class="content__inner">
+                    {%- block main -%}
+                        {{- content | safe -}}
+                    {%- endblock %}
+                </div>
+                <div class="content__extra">
+                    {%- block right -%}
+                        {{- content | safe -}}
+                    {%- endblock %}
+                </div>
+            </section>
+        </main>
+        {%- block bottom -%}
             {{- content | safe -}}
         {%- endblock %}
-        </main>
         {% include "_includes/core/_footer.njk" %}
     </div>
 
-    <script>!function(){if(document.getElementById("hslRange")){document.body.innerHTML+='<style id="hslVariable"></style>';let e=document.getElementById("hslRange"),n=document.getElementById("hslVariable"),t=e.value,l=parseInt(t)+230;n.innerHTML=`:root{--hue: ${t}; --contrast: ${l}; }`,e.addEventListener("change",a=>{l=parseInt(t=e.value)+230,n.innerHTML=`:root{--hue: ${t}; --contrast: ${l}; }`})}}();</script>
-    {%- block js -%}
+    {%- block scripts -%}
+    <script>
+        let consoleClubTitle = '🧑‍💻 Welcome to Console Club, fellow code wizard!'
+        let consoleClubDescription = 'How lovely to see a new face around here. Please, take a cookie. I extend an open invitation for you to freely use any code from this domain. However, I implore you to embrace your creativity and make it uniquely yours. Learn the runes and let your imagination soar, and with each line you borrow, infuse it with your own magic to craft something truly extraordinary! \n\nConsole Club membership cookie was added to your inventory'
+        const consoleClubStyles = [
+        'color: black',
+        'background: deeppink',
+        'font-size: 30px',
+        'font-family: sans-serif',
+        'padding: 0 14px',
+        ].join(';');
+        console.log('%c'+consoleClubTitle, consoleClubStyles);
+        console.log('%c'+consoleClubDescription, 'color: white; background: black;font-size: 18px;');
+    </script>
+    {%- block scriptsContent -%}
+        {{- content | safe -}}
+    {%- endblock %}
     {%- endblock -%}
 </body>
 
