⚡️ Add CSS nocache

--- a/_includes/core/_head.njk
+++ b/_includes/core/_head.njk
@@ -18,5 +18,5 @@
     <style>
         {% getBundle "css", "preload" %}
     </style>
-    <link href="/css/main.css" rel="stylesheet">
+    <link href="/css/main.css?nocache=333" rel="stylesheet">
 </head>
