--- a/content/site.njk
+++ b/content/site.njk
@@ -23,11 +23,11 @@ description: Sources and inpiration for assets and tools used on this site.
 		<ul class="stars">
 			<li>Latest status is powered by <a href="https://status.cafe" target="_blank">status.cafe</a></li>
 			<li><a href="https://github.com/biancarosa/lastfm-last-played" target="_blank">Last.fm last played script</a> by <a href="https://biancarosa.com.br/" target="_blank">Bianca Rosa</a></li>
-			<li><a href="https://projects.verou.me/css3patterns/" target="_blank">Squiggly background gradient</a> by Lea Verou</li>
+			<li><a href="https://projects.verou.me/css3patterns/" target="_blank">CSS star background</a> by Lea Verou</li>
 			<li>Avatar by <a href="https://alexboucher.carbonmade.com/">flowerveil</a>, commisioned many moons ago</li>
 			<li><a href="https://doodad.dev/dither-me-this/" target="_blank">Image dithering tool</a> by doodad</li>
 			<li>Logo font is <a href="https://github.com/satsuyako/CherryBomb" target="_blank">Cherry Bomb</a></li>
-			<li>Body font is <a href="https://brailleinstitute.org/freefont" target="_blank">Atkinson atkinson-hyperlegible</a></li>
+			<li>Body font is <a href="https://brailleinstitute.org/freefont" target="_blank">Atkinson Hyperlegible</a></li>
 		</ul>
 	</div>
 </section>
