--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,13 +17,13 @@
 }
 
 @media (prefers-color-scheme: light) {
-    :root {
-        --bodybg: LavenderBlush;
-        --bg: Snow;
-        --link: Blue;
-        --linkhover: Crimson;
-        --text: black;
-    }
+  :root {
+    --bodybg: LavenderBlush;
+    --bg: Snow;
+    --link: Blue;
+    --linkhover: Crimson;
+    --text: black;
+  }
 }
 
 @font-face {
@@ -65,18 +65,18 @@ body {
   padding: 0;
   margin: 0;
   background:
-  linear-gradient(324deg, var(--bg) 4%,   transparent 4%) -70px 43px,
-  linear-gradient( 36deg, var(--bg) 4%,   transparent 4%) 30px 43px,
-  linear-gradient( 72deg, var(--bodybg) 8.5%, transparent 8.5%) 30px 43px,
-  linear-gradient(288deg, var(--bodybg) 8.5%, transparent 8.5%) -70px 43px,
-  linear-gradient(216deg, var(--bodybg) 7.5%, transparent 7.5%) -70px 23px,
-  linear-gradient(144deg, var(--bodybg) 7.5%, transparent 7.5%) 30px 23px,
-  linear-gradient(324deg, var(--bg) 4%,   transparent 4%) -20px 93px,
-  linear-gradient( 36deg, var(--bg) 4%,   transparent 4%) 80px 93px,
-  linear-gradient( 72deg, var(--bodybg) 8.5%, transparent 8.5%) 80px 93px,
-  linear-gradient(288deg, var(--bodybg) 8.5%, transparent 8.5%) -20px 93px,
-  linear-gradient(216deg, var(--bodybg) 7.5%, transparent 7.5%) -20px 73px,
-  linear-gradient(144deg, var(--bodybg) 7.5%, transparent 7.5%) 80px 73px;
+    linear-gradient(324deg, var(--bg) 4%, transparent 4%) -70px 43px,
+    linear-gradient(36deg, var(--bg) 4%, transparent 4%) 30px 43px,
+    linear-gradient(72deg, var(--bodybg) 8.5%, transparent 8.5%) 30px 43px,
+    linear-gradient(288deg, var(--bodybg) 8.5%, transparent 8.5%) -70px 43px,
+    linear-gradient(216deg, var(--bodybg) 7.5%, transparent 7.5%) -70px 23px,
+    linear-gradient(144deg, var(--bodybg) 7.5%, transparent 7.5%) 30px 23px,
+    linear-gradient(324deg, var(--bg) 4%, transparent 4%) -20px 93px,
+    linear-gradient(36deg, var(--bg) 4%, transparent 4%) 80px 93px,
+    linear-gradient(72deg, var(--bodybg) 8.5%, transparent 8.5%) 80px 93px,
+    linear-gradient(288deg, var(--bodybg) 8.5%, transparent 8.5%) -20px 93px,
+    linear-gradient(216deg, var(--bodybg) 7.5%, transparent 7.5%) -20px 73px,
+    linear-gradient(144deg, var(--bodybg) 7.5%, transparent 7.5%) 80px 73px;
   background-color: var(--bg);
   background-size: 100px 100px;
 }
@@ -128,10 +128,12 @@ a.hidden:active {
   color: var(--linkhover);
   text-decoration: underline wavy 2px;
 }
+
 a:hover,
 a:focus {
   color: var(--linkhover)
 }
+
 *:focus-visible {
   outline: 3px solid orangered;
   outline-offset: 3px;
@@ -280,7 +282,9 @@ button[aria-pressed="true"] {
   box-shadow: 0 0 0 0 DarkGoldenRod;
 }
 
-textarea, input, select {
+textarea,
+input,
+select {
   margin: 0 0 1rem 0;
 }
 
@@ -324,11 +328,13 @@ label {
 .callout--small {
   padding: 10px 14px;
 }
+
 .callout--warning {
   border-color: gold;
   background: papayawhip;
   color: black;
 }
+
 .callout--info {
   border-color: deepskyblue;
   background: lavender;
@@ -385,19 +391,20 @@ label {
     fill: hsl(255, 70%, 70%);
     stroke: hsl(255, 70%, 70%)
   }
-  20% {
+
+  10% {
     fill: hsl(330, 70%, 70%);
     stroke: hsl(330, 70%, 70%)
   }
 
-  40% {
-    fill: hsl(51, 70%, 70%);
-    stroke: hsl(51, 70%, 70%)
+  50% {
+    fill: hsl(10, 100%, 60%);
+    stroke: hsl(10, 100%, 60%)
   }
 
   60% {
-    fill: hsl(102, 70%, 70%);
-    stroke: hsl(102, 70%, 70%)
+    fill: hsl(51, 100%, 60%);
+    stroke: hsl(51, 100%, 60%)
   }
 
   80% {
@@ -417,12 +424,13 @@ label {
       fill: hsl(255, 70%, 70%);
       stroke: hsl(255, 70%, 70%)
     }
-    20% {
+
+    10% {
       fill: hsl(330, 100%, 40%);
       stroke: hsl(330, 100%, 40%)
     }
 
-    40% {
+    50% {
       fill: hsl(10, 100%, 50%);
       stroke: hsl(10, 100%, 50%)
     }
@@ -450,9 +458,11 @@ label {
   0% {
     fill: gold;
   }
+
   30% {
-      fill: transparent;
+    fill: transparent;
   }
+
   100% {
     fill: transparent;
   }
@@ -561,6 +571,7 @@ label {
 .page__main {
   padding: 30px 0 0 0;
 }
+
 @media (min-width: 768px) {
   .page__main {
     min-height: 70vh;
@@ -590,6 +601,7 @@ label {
     grid-template-columns: 200px 1fr;
   }
 }
+
 @media (min-width: 768px) {
   .bio {
     grid-template-columns: 1fr;
@@ -605,6 +617,7 @@ label {
   -webkit-mask: var(--mask);
   mask: var(--mask);
 }
+
 @media (min-width: 480px) {
   .bio-pic {
     max-width: 200px;
@@ -707,7 +720,7 @@ label {
   row-gap: 15px;
 }
 
-.webrings > * {
+.webrings>* {
   display: flex;
 }
 
@@ -729,6 +742,7 @@ label {
 .webring-prev:focus {
   transform: translateX(-2px)
 }
+
 .webring__next:hover,
 .webring__next:focus,
 .webring-next:hover,
@@ -754,6 +768,8 @@ label {
 .webring--neossg table {
   border-spacing: 0;
 }
-.webring--neossg table td, .webring--neossg table th{
+
+.webring--neossg table td,
+.webring--neossg table th {
   padding: 0;
 }
