--- a/content/site.njk
+++ b/content/site.njk
@@ -1,6 +1,5 @@
 ---
 title: About the site
-description: Sources and inpiration for assets and tools used on this site.
 ---
 {% extends 'layouts/page.njk'%}
 
@@ -12,13 +11,13 @@ description: Sources and inpiration for assets and tools used on this site.
 	{{ macro.header(title, description) }}
 	<div class="reading-width">
 		<h2>Technical information</h2>
-			<ul class="stars">
-				<li>Built using <a href="https://www.11ty.dev/" target="_blank">eleventy</a> static site generator</li>
-				<li>Source code is on <a href="https://github.com/CupOfTegan/frills-neocities" target="_blank">Github</a></li>
-				<li>Hosted on <a href="https://neocities.org" target="_blank">Neocities</a> using the <a href="https://deploy-to-neocities.neocities.org/" target="_blank">deploy to Neocities guide</a></li>
-				<li>Coded in <a href="https://code.visualstudio.com/download" target="_blank">VSCode</a></li>
-				<li>Tested in <a href="https://www.mozilla.org/en-GB/firefox/new/" target="_blank">Firefox</a> on Windows 11 and Mac OS Catalina</li>
-			</ul>
+		<ul class="stars">
+			<li>Built using <a href="https://www.11ty.dev/" target="_blank">eleventy</a> static site generator</li>
+			<li>Source code is on <a href="https://github.com/CupOfTegan/frills-neocities" target="_blank">Github</a></li>
+			<li>Hosted on <a href="https://neocities.org" target="_blank">Neocities</a> using the <a href="https://deploy-to-neocities.neocities.org/" target="_blank">deploy to Neocities guide</a></li>
+			<li>Coded in <a href="https://code.visualstudio.com/download" target="_blank">VSCode</a></li>
+			<li>Tested in <a href="https://www.mozilla.org/en-GB/firefox/new/" target="_blank">Firefox</a> on Windows 11 and Mac OS Catalina</li>
+		</ul>
 		<h2>Credits</h2>
 		<ul class="stars">
 			<li>Latest status is powered by <a href="https://status.cafe" target="_blank">status.cafe</a></li>
@@ -29,6 +28,28 @@ description: Sources and inpiration for assets and tools used on this site.
 			<li>Logo font is <a href="https://github.com/satsuyako/CherryBomb" target="_blank">Cherry Bomb</a></li>
 			<li>Body font is <a href="https://brailleinstitute.org/freefont" target="_blank">Atkinson Hyperlegible</a></li>
 		</ul>
+		<h2>To do</h2>
+
+		<ol>
+			<li><span class="emoji" role="img" aria-label="Check mark">✅</span> Credits page (this page!)</li>
+			<li>Manifesto page</li>
+			<li><span class="emoji" role="img" aria-label="Check mark">✅</span> 88x31 <a href="/links/">button wall</a>.</li>
+			<li>Site map (that I nuked because I thought it was killing the pipeline)</li>
+			<li>Orla shrine</li>
+			<li>Cool things I've done page
+				<ul>
+					<li>Scribble Light on Subtle Patterns</li>
+					<li>CSS Tarot card (3 of swords)</li>
+					<li>CSS Skull</li>
+					<li>Background colour range</li>
+					<li>Clients I have developed for. not that this is a work site. just somewhere to rememeber them all</li>
+				</ul>
+			</li>
+			<li>Frills art</li>
+			<li>Accessibility resources - glossary?</li>
+			<li>Free accessible neocities template</li>
+		</ol>
+
 	</div>
 </section>
 
