--- a/content/site.njk
+++ b/content/site.njk
@@ -22,7 +22,7 @@ title: About the site
 		<ul class="stars">
 			<li>Latest status is powered by <a href="https://status.cafe" target="_blank">status.cafe</a></li>
 			<li><a href="https://github.com/biancarosa/lastfm-last-played" target="_blank">Last.fm last played script</a> by <a href="https://biancarosa.com.br/" target="_blank">Bianca Rosa</a></li>
-			<li><a href="https://projects.verou.me/css3patterns/" target="_blank">CSS star background</a> by Lea Verou</li>
+			<li><a href="https://superdesigner.co/tools/css-backgrounds" target="_blank">CSS background</a> by Super Designer</li>
 			<li>Avatar by <a href="https://alexboucher.carbonmade.com/">flowerveil</a>, commisioned many moons ago</li>
 			<li><a href="https://doodad.dev/dither-me-this/" target="_blank">Image dithering tool</a> by doodad</li>
 			<li>Logo font is <a href="https://github.com/satsuyako/CherryBomb" target="_blank">Cherry Bomb</a></li>
