--- a/public/css/main.css
+++ b/public/css/main.css
@@ -65,21 +65,15 @@ body {
   padding: 0;
   margin: 0;
   background:
-    linear-gradient(324deg, var(--bg) 4%, transparent 4%) -70px 43px,
-    linear-gradient(36deg, var(--bg) 4%, transparent 4%) 30px 43px,
-    linear-gradient(72deg, var(--bodybg) 8.5%, transparent 8.5%) 30px 43px,
-    linear-gradient(288deg, var(--bodybg) 8.5%, transparent 8.5%) -70px 43px,
-    linear-gradient(216deg, var(--bodybg) 7.5%, transparent 7.5%) -70px 23px,
-    linear-gradient(144deg, var(--bodybg) 7.5%, transparent 7.5%) 30px 23px,
-    linear-gradient(324deg, var(--bg) 4%, transparent 4%) -20px 93px,
-    linear-gradient(36deg, var(--bg) 4%, transparent 4%) 80px 93px,
-    linear-gradient(72deg, var(--bodybg) 8.5%, transparent 8.5%) 80px 93px,
-    linear-gradient(288deg, var(--bodybg) 8.5%, transparent 8.5%) -20px 93px,
-    linear-gradient(216deg, var(--bodybg) 7.5%, transparent 7.5%) -20px 73px,
-    linear-gradient(144deg, var(--bodybg) 7.5%, transparent 7.5%) 80px 73px;
+    radial-gradient(circle at top left, transparent 9%, var(--bodybg) 10%, var(--bodybg) 15%, transparent 16%), radial-gradient(circle at bottom left, transparent 9%, var(--bodybg) 10%, var(--bodybg) 15%, transparent 16%),
+    radial-gradient(circle at top right, transparent 9%, var(--bodybg) 10%, var(--bodybg) 15%, transparent 16%),
+    radial-gradient(circle at bottom right, transparent 9%, var(--bodybg) 10%, var(--bodybg) 15%, transparent 16%),
+    radial-gradient(circle, transparent 25%, var(--bg) 26%), linear-gradient(45deg, transparent 46%, var(--bodybg) 47%, var(--bodybg) 52%, transparent 53%),
+    linear-gradient(135deg, transparent 46%, var(--bodybg) 47%, var(--bodybg) 52%, transparent 53%);
+  background-size: 8em 8em;
   background-color: var(--bg);
-  background-size: 100px 100px;
 }
+
 
 h1,
 h2,
