--- a/_includes/layouts/list.njk
+++ b/_includes/layouts/list.njk
@@ -1,12 +1,9 @@
 {% extends "core/base.njk" %}
 
-{%- block left -%}
-{%- endblock -%}
-
 {%- block main -%}
 	{% import "_includes/_components/components.njk" as macro with context %}
 	{{ macro.header(title) }}
-	<ol reversed class="bloglist stars">
+	<ol reversed class="listing stars">
 	{% for post in postslist | reverse %}
 		<li {% if post.data.draft %}class="draft"{% endif %}>
 			<a href="{{ post.url }}">{% if post.data.title %}{{ post.data.title | safe }}{% else %}{{ post.url }}{% endif %}</a>
@@ -14,10 +11,4 @@
 		</li>
 	{% endfor %}
 	</ol>
-{%- endblock -%}
-
-{%- block scriptsContent -%}
-<script>
-
-</script>
 {%- endblock -%}
